fixed linting errors

--- a/content/audios/2012/en_2012.md
+++ b/content/audios/2012/en_2012.md
@@ -1,8 +1,10 @@
 ---
 type: category
-title: 2012
+title: "2012"
 lang: en
-image: en_2012.jpg
+image:
+  desktop: en_2012.jpg
+  alt: "Srila Sridhar Maharaj talking and young Bhakti Sudhir Goswami listening"
 ---
 
 Hear about Krishna from someone who has real love and affection for Krishna, substantially, and when that enters your heart the flag of Krishna conception will be planted in that soil and ultimately spread its influence and clean the heart in the ultimate victory.
