--- a/content/audios/2012/ru_2012.md
+++ b/content/audios/2012/ru_2012.md
@@ -1,8 +1,10 @@
 ---
 type: category
-title: 2012
+title: "2012"
 lang: ru
-image: ru_2012.jpg
+image: 
+  desktop: ru_2012.jpg
+  alt: "Госвами Махарадж что-то обьясняет жестикулируя"
 ---
 
 Слушай о Кришне от того, кто по-настоящему любит Его и привязан к Нему, и тогда это чувство войдет и установит свой флаг на земле твоего сердца, а затем полностью захватит его, очистит и воссияет в своей полной славе.
