--- a/content/audios/2000/ru_2000.md
+++ b/content/audios/2000/ru_2000.md
@@ -1,7 +1,8 @@
 ---
 type: category
-title: 2000
+title: "2000"
 lang: ru
+slug: ru-2000
 ---
 
 Мы пытаемся приблизиться к Безграничному, найти доступ в высочайшую и сокровеннейшую реальность. И если она действительно нечто живое, реальное, подлинное, то не следует ожидать, что она примет образ, отвечающий нашим представлениям, но, скорее, следует позволить изменить себя, согласно её потребностям.
