--- a/content/audios/2012/ru_2012.md
+++ b/content/audios/2012/ru_2012.md
@@ -2,6 +2,7 @@
 type: category
 title: "2012"
 lang: ru
+slug: ru-2012
 image: 
   desktop: ru_2012.jpg
   alt: "Госвами Махарадж что-то обьясняет жестикулируя"
