--- a/content/audios/2012/en_2012.md
+++ b/content/audios/2012/en_2012.md
@@ -2,6 +2,7 @@
 type: category
 title: "2012"
 lang: en
+slug: en-2012
 image:
   desktop: en_2012.jpg
   alt: "Srila Sridhar Maharaj talking and young Bhakti Sudhir Goswami listening"
