--- a/content/audios/2011/2011-11-19_Who_Am_I/en_2011-11-19_Who_Am_I.md
+++ b/content/audios/2011/2011-11-19_Who_Am_I/en_2011-11-19_Who_Am_I.md
@@ -4,10 +4,12 @@ lang: en
 title: "Who am I?"
 authors:
   - Bhakti Sudhir Goswami
-date: 2011-11-19
-audio: en_2011-11-19_Who_Am_I.mp3
-draft: true
+date: "2011-11-19"
+audio:
+  file: en_2011-11-19_Who_Am_I.mp3
+duration: "00:54:45"
+status: draft
 slug: en-2011-11-19-who-am-i
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ---
-
 
